# hap-desktop

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
app/: .editorconfig  README.md  electron-builder.json5  index.html  package.json  vite.config.ts
app/electron/main/: index.ts  server.ts  vosk-test.js
app/src/: App.tsx  Edit.tsx  Settings.tsx  atoms.ts  main.tsx
app/src/assets/styles/: app.module.scss
app/src/components/: ColorSwitch.tsx  ModeSwitch.tsx  PlaybackControls.tsx  PlaybackSettings.tsx  PlaybackSlider.tsx  Player.tsx  Preloader.tsx  Video.tsx  index.ts
app/src/components/editor/: Editor.ts  Editor.tsx  PlayheadDecorator.tsx  index.ts  reducer.ts
app/src/components/player/: Player.tsx
app/src/config/: colors.ts  index.ts  modes.ts
app/src/data/: sampleTranscript.json  sampleTranscript2.json
app/src/models/: index.ts  project.ts  transcript.ts
app/src/modules/: CloseProjectDialog.tsx  PlaybackBar.tsx  Settings.tsx  SettingsDialog.tsx  StatusBar.tsx  TabBar.tsx  ToolBar.tsx  index.ts
app/src/modules/editor/: Editor.tsx  PlayheadDecorator.tsx  index.ts
app/src/pages/: Edit.tsx  Home.tsx  index.ts
app/src/state/: PlayerState.ts  ProjectState.ts  SettingsAtom.ts  SettingsAtoms.ts  SettingsState.ts  index.ts
app/src/themes/: darkTheme.tsx  lightTheme.tsx  themeUtils.ts
app/src/typings/: Settings.ts  bbc.d.ts
app/src/utils/: ElectronUtils.ts  formatTime.ts  index.ts
app/src/views/: Main.tsx
server/: build.sh  index.html  pyoxidizer.bzl  pyproject.toml  run.py
server/app/: main.py  transcribe.py
(+9 files in other folders)
