[tool.poetry]
name = "Hyperaudio-desktop Server"
version = "0.0.1"
description = ""
authors = ["Laurian Gridinoc <laurian@gridinoc.name>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8, !=3.9.0, <3.11"
vosk = "0.3.44"
uvicorn = "^0.20.0"
starlette = "^0.23.1"
requests = "^2.28.2"
charset-normalizer = "^3.0.1"
chardet = "^5.1.0"
cffi = "^1.15.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pyoxidizer  = "^0.23.0"
types-requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
